k8s/overlays/prod/digraph/digraph-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: digraph-frontend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - digraph.app
        - prod.digraph.app
      secretName: digraph-frontend-tls
  rules:
    - host: prod.digraph.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prod-digraph-client
                port:
                  number: 3000
    - host: digraph.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prod-digraph-client
                port:
                  number: 3000
    # - host: next.digraph.app
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: next-digraph-client
    #             port:
    #               number: 3002
